# dd-grok-tester

./: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json
.github/workflows/: docker-publish.yml  pipeline.yml  test.yml
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.css  App.tsx  Docs.md  test-setup.ts  types.ts  utils.ts
client/src/__tests__/: App.test.tsx  utils.test.ts
client/src/components/: GrokEditor.tsx  HistoryTab.tsx  ImportDialog.tsx  JsonFormatter.tsx  TestTab.tsx
client/src/components/__tests__/: ImportDialog.test.tsx  JsonFormatter.test.tsx
client/src/hooks/: useGrokSession.ts
client/src/hooks/__tests__/: useGrokSession.test.ts
server/: Cargo.toml
server/src/: error.rs  grok.rs  handlers.rs  main.rs  models.rs
tests/: test_grok_examples.py
